# RepoHealth

./: .gitignore  test.md
.claude/: CLAUDE.md  settings.json  settings.local.json
backend/: .env.example  README.md  pyproject.toml  test_distribution.py  test_file_changes.py  test_pr_comment.py
backend/app/: main.py
backend/app/api/v1/endpoints/: __init__.py  repo.py  webhook.py
backend/app/core/: config.py  dependencies.py  logger.py  utils.py
backend/app/schemas/: repo.py
backend/app/services/: ai_service.py  event_history_service.py  event_queue.py  repo_event_service.py  storage_service.py
backend/app/workers/: event_worker.py
backend/tests/: test_event_history_service.py  test_repo_endpoints.py  test_repo_event_processor.py  test_storage_service.py  test_webhook_route.py
frontend/: .env.local.example  .lintstagedrc.js  .prettierignore  .prettierrc  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.test.json  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: index.ts
frontend/src/components/code/: CodeHealth.css  CodeHealth.test.tsx  CodeHealth.tsx
frontend/src/components/layout/: DashboardHeader.css  DashboardHeader.test.tsx  DashboardHeader.tsx
frontend/src/pages/: DashboardPage.css  DashboardPage.test.tsx  DashboardPage.tsx
frontend/src/services/: api.test.ts  api.ts
frontend/src/stores/: dashboardStore.test.ts  dashboardStore.ts
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts  format.test.ts  format.ts
(+15 files in other folders)
