[project]
name = "repohealth-backend"
version = "0.1.0"
description = "FastAPI backend for RepoHealth"
authors = [
    {name = "Your Name",email = "email@example.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "cryptography>=41.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.0",
    "openai>=1.3.0",  # For DeepSeek API (OpenAI compatible)
    "PyYAML>=6.0.0",
    "redis>=5.0.0",  # Optional for future queue
    "celery>=5.3.0",  # Optional for distributed task queue
]


[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
